--- a/presentation/index.html
+++ b/presentation/index.html
@@ -15,7 +15,7 @@
 
 
 
-class: notitle, middle, title-slide, 
+class:  middle, title-slide, 
 
 &lt;div class="my-logo-left"&gt;&lt;/div&gt;
 
@@ -32,15 +32,14 @@ class: notitle, middle, title-slide,
 &lt;i class="fa fa-twitter fa-lg" style="color:#e7e8e2"&gt;&lt;/i&gt; [@BenMerSci](https://twitter.com/BenMerSci)
 
 ---
-class: clear
-&lt;clear&gt;# Tables des matières &lt;/clear&gt;
-1. Préambule
-2. Théorie
-3. Objectifs et hypothèse
-4. Méthodologie
-5. Résultats
-6. Analyse
-7. Conclusion
+# Tables des matières
+1. Préambule &lt;br&gt;&lt;br&gt;
+2. Théorie &lt;br&gt;&lt;br&gt;
+3. Objectifs et hypothèse &lt;br&gt;&lt;br&gt;
+4. Méthodologie &lt;br&gt;&lt;br&gt;
+5. Résultats &lt;br&gt;&lt;br&gt;
+6. Analyse &lt;br&gt;&lt;br&gt;
+7. Conclusion &lt;br&gt;&lt;br&gt;
 
 ---
 
