--- a/presentation/index.html
+++ b/presentation/index.html
@@ -128,7 +128,7 @@ class:  middle, title-slide,
 &lt;tfoot&gt;
 &lt;tr&gt;&lt;td style="padding: 0; border: 0;" colspan="100%"&gt;&lt;span style="font-style: italic;"&gt;Note: &lt;/span&gt;&lt;/td&gt;&lt;/tr&gt;
 &lt;tr&gt;&lt;td style="padding: 0; border: 0;" colspan="100%"&gt;
-&lt;sup&gt;&lt;/sup&gt; NS = Nombre d'espèce, NBasale = Nombre d'espèces basales, NInt = Nombre d'espèces intermédiaires, NTop = Nombre d'espèces supérieures, NL = Nombre de liens, DensL = Densité de liens, C = Connectance, GenSD = Généralité, VulSD = Vulnérabilité, MoyTR = Niveau trophique moyen, MaxTR = Niveau trophique maximum, Omn = Niveau d'omnivorie.&lt;/td&gt;&lt;/tr&gt;
+&lt;sup&gt;&lt;/sup&gt; NS = Nombre d'espèce, NBasale = Nombre d'espèces basales, NInt = Nombre d'espèces intermédiaires, NTop = Nombre d'espèces supérieures, NL = Nombre de liens, DensL = Densité de liens (NL/NS), C = Connectance (NL/NS²), GenSD = Généralité, VulSD = Vulnérabilité, MoyTR = Niveau trophique moyen, MaxTR = Niveau trophique maximum, Omn = Niveau d'omnivorie.&lt;/td&gt;&lt;/tr&gt;
 &lt;/tfoot&gt;
 &lt;/table&gt;
 
@@ -148,6 +148,12 @@ class:  middle, title-slide,
 .center[![:scale 70%](images/metrics_map.png)]
 
 ---
+
+# Profil latitudinal
+.center[![:scale 70%](images/latitudinal_profil.png)]
+
+---
+
 class: inverse
 
 .pull-left[
