--- a/presentation/index.html
+++ b/presentation/index.html
@@ -22,7 +22,7 @@ class:  middle, title-slide,
 
 # Réseaux trophiques  &lt;br&gt; des vertébrés &lt;br&gt; terrestres du &lt;br&gt; Québec
 
-&lt;hr width="45%" align="left" size="0.3" color="orange"&gt;&lt;/hr&gt;
+&lt;hr width="45%" align="left" size="0.3" color="#ffef96"&gt;&lt;/hr&gt;
 
 ## Crédits de recherche &lt;br&gt; ECL618
 &lt;br&gt;&lt;br&gt;
@@ -149,8 +149,106 @@ class:  middle, title-slide,
 
 ---
 
+# Figure rda scaled species
+.center[![:scale 70%](images/rda_fig_scaled_sp.png)]
+
+---
+
+# Figure rda scaled sites
+.center[![:scale 70%](images/rda_fig_scaled_sites.png)]
+
+---
 # Profil latitudinal
 .center[![:scale 70%](images/latitudinal_profil.png)]
+
+---
+
+# Table test de t
+&lt;br&gt;&lt;br&gt;
+&lt;table class="table" style="font-size: 18px; margin-left: auto; margin-right: auto;"&gt;
+&lt;caption style="font-size: initial !important;"&gt;TABLE 2: Comparaison des métriques par biome&lt;/caption&gt;
+ &lt;thead&gt;
+  &lt;tr&gt;
+   &lt;th style="text-align:left;"&gt;   &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; Biome 1 &lt;/th&gt;
+   &lt;th style="text-align:right;"&gt; Moyenne biome 1 &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; Biome 2 &lt;/th&gt;
+   &lt;th style="text-align:right;"&gt; Moyenne biome 2 &lt;/th&gt;
+   &lt;th style="text-align:right;"&gt; t &lt;/th&gt;
+   &lt;th style="text-align:right;"&gt; Ddf &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; Valeur de p &lt;/th&gt;
+  &lt;/tr&gt;
+ &lt;/thead&gt;
+&lt;tbody&gt;
+  &lt;tr grouplength="3"&gt;&lt;td colspan="8" style="background-color: #666; color: #fff;"&gt;&lt;strong&gt;Densité de liens (NL/NS)&lt;/strong&gt;&lt;/td&gt;&lt;/tr&gt;
+&lt;tr&gt;
+   &lt;td style="text-align:left; padding-left: 2em;" indentlevel="1"&gt; 1 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Tempérée &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 8.91 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Boréale &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 6.83 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 450.27 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 283738.4 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; &amp;lt; 0.001 &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left; padding-left: 2em;" indentlevel="1"&gt; 2 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Tempérée &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 8.91 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Arctique &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 4.79 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 884.67 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 293193.1 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; &amp;lt; 0.001 &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left; padding-left: 2em;" indentlevel="1"&gt; 3 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Boréale &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 6.83 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Arctique &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 4.79 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 1439.22 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 943415.4 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; &amp;lt; 0.001 &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr grouplength="3"&gt;&lt;td colspan="8" style="background-color: #666; color: #fff;"&gt;&lt;strong&gt;Connectance (NL/NS²)&lt;/strong&gt;&lt;/td&gt;&lt;/tr&gt;
+&lt;tr&gt;
+   &lt;td style="text-align:left; padding-left: 2em;" indentlevel="1"&gt; 4 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Tempérée &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.04 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Boréale &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.06 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; -1076.93 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 612403.8 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; &amp;lt; 0.001 &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left; padding-left: 2em;" indentlevel="1"&gt; 5 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Tempérée &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.04 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Arctique &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.08 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; -2370.65 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 572369.6 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; &amp;lt; 0.001 &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left; padding-left: 2em;" indentlevel="1"&gt; 6 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Boréale &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.06 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Arctique &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.08 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; -1551.42 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 1015736.5 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; &amp;lt; 0.001 &lt;/td&gt;
+  &lt;/tr&gt;
+&lt;/tbody&gt;
+&lt;tfoot&gt;
+&lt;tr&gt;&lt;td style="padding: 0; border: 0;" colspan="100%"&gt;&lt;span style="font-style: italic;"&gt;Note: &lt;/span&gt;&lt;/td&gt;&lt;/tr&gt;
+&lt;tr&gt;&lt;td style="padding: 0; border: 0;" colspan="100%"&gt;
+&lt;sup&gt;&lt;/sup&gt; t = statistique de t, Ddf = Degrés de liberté&lt;/td&gt;&lt;/tr&gt;
+&lt;/tfoot&gt;
+&lt;/table&gt;
 
 ---
 
@@ -172,7 +270,6 @@ class: inverse
 
 .pull-right1[
 &lt;br&gt;
-![:scale 80%](images/logo.png)
 ]
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
