--- a/presentation/index.html
+++ b/presentation/index.html
@@ -149,15 +149,12 @@ class:  middle, title-slide,
 
 ---
 
-# Figure rda scaled species
-.center[![:scale 70%](images/rda_fig_scaled_sp.png)]
+# RDA métriques
+.center[![:scale 75%](images/varpart_fig.png)]
+
 
 ---
 
-# Figure rda scaled sites
-.center[![:scale 70%](images/rda_fig_scaled_sites.png)]
-
----
 # Profil latitudinal
 .center[![:scale 70%](images/latitudinal_profil.png)]
 
