--- a/presentation/index.html
+++ b/presentation/index.html
@@ -22,7 +22,7 @@ class:  middle, title-slide,
 
 # Réseaux trophiques  &lt;br&gt; des vertébrés &lt;br&gt; terrestres du &lt;br&gt; Québec
 
-&lt;hr width="45%" align="left" size="0.3" color="#ffef96"&gt;&lt;/hr&gt;
+&lt;hr width="45%" align="left" size="0.3" color="#c19a6b"&gt;&lt;/hr&gt;
 
 ## Crédits de recherche &lt;br&gt; ECL618
 &lt;br&gt;&lt;br&gt;
@@ -37,7 +37,7 @@ class:  middle, title-slide,
 3. Objectifs et hypothèse &lt;br&gt;&lt;br&gt;
 4. Méthodologie &lt;br&gt;&lt;br&gt;
 5. Résultats &lt;br&gt;&lt;br&gt;
-6. Analyse &lt;br&gt;&lt;br&gt;
+6. Discussion &lt;br&gt;&lt;br&gt;
 7. Conclusion &lt;br&gt;&lt;br&gt;
 
 ---
@@ -251,22 +251,17 @@ class:  middle, title-slide,
 
 class: inverse
 
+
+# Questions? 
+
+
+&lt;br&gt;
 .pull-left[
-&lt;br&gt;
-
-# Questions?
-
-&lt;br&gt;
-
-**Remerciements à**
+**Remerciements**
  - Dominique Gravel
  - Marc Bélisle
  - Guillaume Blanchet
  - Les membres du laboratoire d'écologie intégrative &lt;br&gt;
-]
-
-.pull-right1[
-&lt;br&gt;
 ]
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
